--- a/index.html
+++ b/index.html
@@ -55,33 +55,38 @@
             </div>
         </section>
 
-  
-
         <section id="Schedule">
             <h2>Our Weekly Schedule</h2>
             <table>
-                <tr >
-                    <th>Sunday</th>
-                    <th>Monday</th>
-                    <th>Tuesday</th>
-                    <th>Wednesday</th>
-                    <th>Thursday</th>
-                    <th>Friday</th>
-                    <th>Saturday</th>
-                </tr>
-                <tr >
-                    <td>from 8:00 am to 2:00 pm</td>
-                    <td>from 8:00 am to 2:00 pm</td>
-                    <td>from 8:00 am to 2:00 pm</td>
-                    <td>from 8:00 am to 2:00 pm</td>
-                    <td>from 8:00 am to 2:00 pm</td>
-                    <td>closed</td>
-                    <td>closed</td>
-                </tr>
+                <thead>
+                    <tr>
+                        <th>Sunday</th>
+                        <th>Monday</th>
+                        <th>Tuesday</th>
+                        <th>Wednesday</th>
+                        <th>Thursday</th>
+                        <th>Friday</th>
+                        <th>Saturday</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td data-label="Sunday">8:00 AM - 2:00 PM</td>
+                        <td data-label="Monday">8:00 AM - 2:00 PM</td>
+                        <td data-label="Tuesday">8:00 AM - 2:00 PM</td>
+                        <td data-label="Wednesday">8:00 AM - 2:00 PM</td>
+                        <td data-label="Thursday">8:00 AM - 2:00 PM</td>
+                        <td data-label="Friday">Closed</td>
+                        <td data-label="Saturday">Closed</td>
+                    </tr>
+                </tbody>
             </table>
         </section>
+        
 
-        <br><br><br><br><br><br>
+  
+
+      
         <footer class="parent-r-a" id="Parents">
             <h2>Parents Resources and Announcements</h2>
             <div class="footer-cont">
